testdata/golden/sema/invalid/ret_block_result_mismatch.fmt
fn main(flag: bool) -> nothing {
    let x = {
        if flag {
            ret 1;
        }
        ret nothing;
    };
    x;
    return nothing;
}
